--- a/index.html
+++ b/index.html
@@ -150,42 +150,42 @@
   </section>
 
   <section class="qualidade" id="qualidade">
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Inteligente</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
         previsão</p>
     </div>
 
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Compacto</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
         previsão das condições irrevogáveis</p>
     </div>
 
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Econômico</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
         previsão</p>
     </div>
 
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Transparente</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
         previsão</p>
     </div>
 
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Opaco</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
         previsão das condições irrevogáveis</p>
     </div>
 
-    <div class="qualidade-tem">
+    <div class="qualidade-item">
       <h2>Sustentável</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de 
         objetivos afeta positivamente a correta
@@ -205,7 +205,7 @@
   </section>
 
   <footer class="footer">
-    <p>FlexBlog © Todos os direitos reservados.</p>
+    <p>uFlexin © Todos os direitos reservados.</p>
   </footer>
 
   <script src="js/script.js" type="text/javascript"></script>
